// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stats reducer MERGE_STATS_FILTERS should merge stats filters 1`] = `
Immutable.Map {
  "filters": Immutable.Map {
    "score": 4,
    "tags": Immutable.List [
      1,
      2,
      4,
    ],
    "agents": Immutable.List [
      1,
    ],
  },
}
`;

exports[`stats reducer RESET_STATS_FILTERS should reset stats filters  1`] = `
Immutable.Map {
  "filters": Immutable.Map {
    "period": Immutable.Map {
      "start_datetime": "1970-01-01T00:00:00+00:00",
      "end_datetime": "1970-01-01T00:00:00+00:00",
    },
  },
}
`;

exports[`stats reducer SET_STATS_FILTERS should set stats filters 1`] = `
Immutable.Map {
  "filters": Immutable.Map {
    "tags": Immutable.List [
      1,
      2,
      4,
    ],
    "agents": Immutable.List [
      1,
    ],
  },
}
`;

exports[`stats reducer should return initial state 1`] = `
Immutable.Map {
  "filters": Immutable.Map {
    "period": Immutable.Map {
      "start_datetime": "1970-01-01T00:00:00+00:00",
      "end_datetime": "1970-01-01T00:00:00+00:00",
    },
  },
}
`;
